# langraph-reactjs-fastapi-chat

./: .env.example  .gitignore  README.md  docker-compose-langfuse.yml  langraph-chat.code-workspace
backend/: .gitignore  README.md  agents.py  checkpoints.sqlite-shm  checkpoints.sqlite-wal  config.py  llm.py  logger.py  main copy.py  main.py  pyproject.toml  routes.py  schemas.py  services.py  tools.py  utils.py
backend/.gemini/antigravity/brain/f85aac13-6364-4669-a0ff-f6df8441909a/scratch/: inspect_tools.py  test_api_orchestration.py  test_discovery.py  test_orchestration.py  test_sales_orchestration.py
backend/app/: main.py
backend/app/agents/: graph.py
backend/app/api/: chat.py  products.py  sales.py
backend/app/core/: config.py  llm.py  logger.py
backend/app/services/: services.py  utils.py
backend/app/tools/: mcp_client.py  tools.py
docs/: Optimizing Agent Design Patterns.md  README.md  aprendizado.md  architecture_explanation.md  arquitetura_evolucao.md  generative_ui_pattern.md  technical_flow.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/chat/: ApprovalCard.tsx  ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  WeatherCard.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/ui/: ConfirmDialog.tsx
frontend/src/hooks/: useChatQueries.ts
frontend/src/routes/: ChatRoute.tsx
frontend/src/services/: chatService.ts
frontend/src/types/: chat.ts
frontend/src/ui/: theme.tsx
